# h2-vqe-dissociation

./: .gitignore  CONTINUATION.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: IMPLEMENTATION_PLAN.md  visualization-ideas.md
examples/: quick_zne_demo.py  sample_zne_results.json
notebooks/: demo.ipynb
scripts/: analyze_zne_results.py  run_hardware_experiment.py  run_noise_experiment.py  run_zne_benchmark.py  test_zne_scripts.py
src/h2_vqe/: __init__.py  ansatz.py  dissociation.py  hamiltonian.py  ibm_runtime.py  molecular.py  noise.py  visualization.py  vqe.py
tests/: test_ansatz.py  test_hamiltonian.py  test_integration.py  test_molecular.py  test_vqe.py  test_zne_analysis.py  test_zne_visualization.py
